<resources>
    <string name="app_name">DaggerDemo</string>
    <string name="inject">Inject的使用</string>
    <string name="component">Component的使用</string>
    <string name="qualifier">Qualifier的使用</string>
    <string name="siblings">依赖关系Component</string>
    <string name="extend_one">继承关系Component1</string>
    <string name="extend_two">继承关系Component2</string>
    <string name="scope_one">Scope的使用1</string>
    <string name="scope_two">Scope的使用2</string>
    <string name="jump">跳转</string>
    <string name="bind_instance">BindInstance的使用</string>
    <string name="lazy">Lazy和Provider的使用</string>
    <string name="global">全局AppComponent的使用</string>
    <string name="binds">Binds的使用</string>
    <string name="intomap_intoset">IntoMap的使用</string>
    <string name="todo">TODO</string>

    <!-- for test -->
    <string name="global_test">这就是从全局的AppComponent拿到的Resources</string>
</resources>
