<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <Button
            android:id="@+id/activity_main_inject_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/inject"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

    <Button
            android:id="@+id/activity_main_component_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/component"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/activity_main_inject_btn"/>

    <Button
            android:id="@+id/activity_main_qualifier_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/qualifier"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/activity_main_component_btn"/>

    <Button
            android:id="@+id/activity_main_siblings_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/siblings"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/activity_main_qualifier_btn"/>

    <Button
            android:id="@+id/activity_main_extend_component_one_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/extend_one"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/activity_main_siblings_btn"/>

    <Button
            android:id="@+id/activity_main_extend_component_two_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/extend_two"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/activity_main_extend_component_one_btn"/>

    <Button
            android:id="@+id/activity_main_scope_one_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/scope_one"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/activity_main_extend_component_two_btn"/>

    <Button
            android:id="@+id/activity_main_scope_two_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/scope_two"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/activity_main_scope_one_btn"/>

    <Button
            android:id="@+id/activity_main_bind_instance_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bind_instance"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/activity_main_scope_two_btn"/>

</android.support.constraint.ConstraintLayout>